[gd_scene load_steps=2 format=3 uid="uid://cqv8yh3xmjw3r"]

[ext_resource type="Script" uid="uid://uop2d325drab" path="res://scenes/hangar/hangar.gd" id="1_hangar"]

[node name="Hangar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hangar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopSection" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TopSection"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TopSection/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HANGAR - SHIP ROSTER"
horizontal_alignment = 1

[node name="ResourceBar" type="HBoxContainer" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MetalPanel" type="PanelContainer" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MetalLabel" type="Label" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer/ResourceBar/MetalPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Metal: 500"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CrystalsPanel" type="PanelContainer" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CrystalsLabel" type="Label" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer/ResourceBar/CrystalsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Crystals: 200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FuelPanel" type="PanelContainer" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer/ResourceBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FuelLabel" type="Label" parent="VBoxContainer/TopSection/MarginContainer/VBoxContainer/ResourceBar/FuelPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Fuel: 150"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiddleSection" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PagedContent" type="VBoxContainer" parent="VBoxContainer/MiddleSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShipPageContainer" type="Control" parent="VBoxContainer/MiddleSection/PagedContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="PageNavigation" type="HBoxContainer" parent="VBoxContainer/MiddleSection/PagedContent"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="VBoxContainer/MiddleSection/PagedContent/PageNavigation"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2

[node name="PageLabel" type="Label" parent="VBoxContainer/MiddleSection/PagedContent/PageNavigation"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="VBoxContainer/MiddleSection/PagedContent/PageNavigation"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2

[node name="BottomSection" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 780)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomSection/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="TIER 1 UPGRADES" type="ScrollContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/TIER 1 UPGRADES"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="InventoryGrid" type="GridContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/TIER 1 UPGRADES/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="WEAPONS" type="ScrollContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/WEAPONS"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="WeaponsGrid" type="GridContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/WEAPONS/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="FLEET UPGRADES" type="ScrollContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/FLEET UPGRADES"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="FleetUpgradesGrid" type="GridContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/FLEET UPGRADES/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="FOUNDRY" type="ScrollContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/FOUNDRY"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/FOUNDRY/MarginContainer"]
layout_mode = 2
text = "Ship crafting and blueprints will go here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PILOTS" type="ScrollContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/PILOTS"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/TabContainer/PILOTS/MarginContainer"]
layout_mode = 2
text = "Pilot roster will go here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSide" type="PanelContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/RightSide"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/RightSide/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/RightSide/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "COMBINE"
horizontal_alignment = 1

[node name="CombineArea" type="VBoxContainer" parent="VBoxContainer/BottomSection/MarginContainer/HBoxContainer/RightSide/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
